animations to refresh and readmore

--- a/src/components/liveMatches/index.css
+++ b/src/components/liveMatches/index.css
@@ -1,4 +1,4 @@
-.list{
+/* .list{
     
     overflow-x: scroll;
     display: flex;
@@ -9,4 +9,12 @@
     margin: 0 4px;
     border-radius: 8px;
     border:2px solid #000
+} */
+
+.rotating{
+    animation : rotating 1s linear infinite ;
+}
+@keyframes rotating {
+    from {transform: rotate(-360deg);}
+    to   { transform:rotate(360deg); }
 }
